Adjusted z-index to prevent sticky from covering datepicker when not sticked

--- a/static/less/admin/apps/sites/editor/editor.less
+++ b/static/less/admin/apps/sites/editor/editor.less
@@ -76,7 +76,7 @@ div.editor-header {
 
   .sticky {
     position: relative;
-    z-index: 1030; // Same as Bootstrap navbar sticky
+    z-index: 1000; // Same as Bootstrap navbar sticky
 
     .last-saved-msg {
       color: #999;
